--- a/assets/config.yaml
+++ b/assets/config.yaml
@@ -11,7 +11,7 @@ comm_mode: NC
 test: False
 e_render : True
 load_model: False
-MODEL_PATH: 'E:\Summer Research 2023\MADDPG\MADDPG\model\2023_08_08_12_02_47\model-200.pth'
+MODEL_PATH: 'E:\Summer Research 2023\MADDPG\MADDPG\model\2023_08_17_22_31_45\lowest_step-13.pth'
 batch_size: 20
 n_episode: 300
 max_steps: 50
