--- a/assets/config_fov_60_map4.yaml
+++ b/assets/config_fov_60_map4.yaml
@@ -1,8 +1,8 @@
 # world settings
 json_dir: /../HouseExpo/json
 png_dir: /../assets/png
-map_id_train_set: /../assets/map_3.txt
-map_id_eval_set: /../assets/map_3.txt
+map_id_train_set: /../assets/map_4.txt
+map_id_eval_set: /../assets/map_4.txt
 
 # [GC,LC,NC]
 comm_mode: LC
@@ -10,7 +10,7 @@ comm_mode: LC
 # model-related hyperparam
 done_expoloration: 0.95
 test: False
-e_render : True
+e_render : False
 load_model: False
 MODEL_PATH: 'E:\Summer Research 2023\MADDPG_New\MADDPG\model\map3_converge\lowest_step-213.pth'
 #MODEL_PATH: ''
@@ -43,7 +43,7 @@ robots:
       y: 61
     laser:
       range: 30
-      fov: 360
+      fov: 60
       resolution: 0.1
 
   robot2:
@@ -55,8 +55,10 @@ robots:
       y: 61
     laser:
       range: 30
-      fov: 360
+      fov: 60
       resolution: 0.1
+
+
 
 #  robot3:
 #    color: 30
