--- a/assets/config_fov_60_range_10_map4_4agent_random_position.yaml
+++ b/assets/config_fov_60_range_10_map4_4agent_random_position.yaml
@@ -15,14 +15,14 @@ e_render : False
 #e_render : True
 load_model: False
 #load_model: True
-MODEL_PATH: 'E:\Summer Research 2023\MADDPG_New\MADDPG\model\2023_09_09_11_54_57\model-490.pth'
+MODEL_PATH: 'D:\2023 Summer\MADDPG\model\2023_09_07_11_20_07\model-490.pth'
 #MODEL_PATH: ''
 #MODEL_PATH: 'E:\Summer Research 2023\MADDPG\MADDPG\model\2023_08_17_22_31_45\lowest_step-13.pth'
 batch_size: 60
 n_episode: 500
 max_steps: 50
 episodes_before_train: 60
-model_save_eps: 10
+model_save_eps: 100
 temperature: 1.0
 
 GAMMA: 0.95
@@ -33,8 +33,8 @@ actor_lr: 0.0001
 # robots settings
 robots:
 
-  commRange: 60
-  syncRange: 20
+  commRange: 200
+  syncRange: 200
   number: 4
   robot1:
     color: 100
@@ -83,8 +83,6 @@ robots:
       range: 10
       fov: 60
       resolution: 0.1
-
-
 
 
   w1: 0.00002
