--- a/assets/config_fov_60_range_10_map4_6agent_random_position_test.yaml
+++ b/assets/config_fov_60_range_10_map4_6agent_random_position_test.yaml
@@ -1,28 +1,28 @@
 # world settings
 json_dir: /../HouseExpo/json
 png_dir: /../assets/png
-map_id_train_set: /../assets/map_1.txt
-map_id_eval_set: /../assets/map_1.txt
+map_id_train_set: /../assets/map_4.txt
+map_id_eval_set: /../assets/map_4.txt
 
 # [GC,LC,NC]
 comm_mode: LC
 
 # model-related hyperparam
 done_expoloration: 0.95
-test: False
+test: True
 #test: True
 e_render : True
 #e_render : True
-load_model: False
+load_model: True
 #load_model: True
-MODEL_PATH: 'D:\2023 Summer\MADDPG\model\2023_09_07_11_20_07\model-490.pth'
+MODEL_PATH: 'E:\Summer Research 2023\MADDPG_New\MADDPG\model\2023_09_21_11_19_29\lowest_step-244.pth'
 #MODEL_PATH: ''
 #MODEL_PATH: 'E:\Summer Research 2023\MADDPG\MADDPG\model\2023_08_17_22_31_45\lowest_step-13.pth'
 batch_size: 60
-n_episode: 500
+n_episode: 10
 max_steps: 50
 episodes_before_train: 60
-model_save_eps: 100
+model_save_eps: 10
 temperature: 1.0
 
 GAMMA: 0.95
@@ -35,14 +35,14 @@ robots:
 
   commRange: 200
   syncRange: 200
-  number: 7
+  number: 6
   robot1:
     color: 100
     robotRadius: 1
     resetRandomPose: 0
     startPose:
-      x: 7
-      y: 7
+      x: 100
+      y: 140
     laser:
       range: 10
       fov: 60
@@ -53,68 +53,60 @@ robots:
     robotRadius: 1
     resetRandomPose: 0
     startPose:
-      x: 75
-      y: 75
-    laser:
-      range: 10
-      fov: 60
-      resolution: 0.1
-  robot3:
-    color: 150
-    robotRadius: 1
-    resetRandomPose: 0
-    startPose:
-      x: 5
-      y: 45
-    laser:
-      range: 10
-      fov: 60
-      resolution: 0.1
-  robot4:
-    color: 150
-    robotRadius: 1
-    resetRandomPose: 0
-    startPose:
-      x: 75
-      y: 5
-    laser:
-      range: 10
-      fov: 60
-      resolution: 0.1
-  robot5:
-    color: 150
-    robotRadius: 1
-    resetRandomPose: 0
-    startPose:
-      x: 40
-      y: 30
-    laser:
-      range: 10
-      fov: 60
-      resolution: 0.1
-  robot6:
-    color: 150
-    robotRadius: 1
-    resetRandomPose: 0
-    startPose:
-      x: 60
-      y: 30
-    laser:
-      range: 10
-      fov: 60
-      resolution: 0.1
-  robot7:
-    color: 150
-    robotRadius: 1
-    resetRandomPose: 0
-    startPose:
-      x: 20
-      y: 30
+      x: 70
+      y: 8
     laser:
       range: 10
       fov: 60
       resolution: 0.1
 
+  robot3:
+    color: 50
+    robotRadius: 1
+    resetRandomPose: 0
+    startPose:
+      x: 139
+      y: 87
+    laser:
+      range: 10
+      fov: 60
+      resolution: 0.1
+
+  robot4:
+    color: 180
+    robotRadius: 1
+    resetRandomPose: 0
+    startPose:
+      x: 20
+      y: 50
+    laser:
+      range: 10
+      fov: 60
+      resolution: 0.1
+
+  robot5:
+    color: 220
+    robotRadius: 1
+    resetRandomPose: 0
+    startPose:
+      x: 60
+      y: 115
+    laser:
+      range: 10
+      fov: 60
+      resolution: 0.1
+
+  robot6:
+    color: 220
+    robotRadius: 1
+    resetRandomPose: 0
+    startPose:
+      x: 60
+      y: 80
+    laser:
+      range: 10
+      fov: 60
+      resolution: 0.1
 
 
   w1: 0.00002
@@ -133,8 +125,8 @@ frontiers:
 
 # map
 map:
-  y: 80
-  x: 80
+  y: 150
+  x: 150
 
 # color
 color:
